--- a/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/WEB-INF/templates/menu.xhtml
@@ -74,6 +74,8 @@ and open the template in the editor.
                 <p:menuitem value="#{msg.report_pending_management}" rendered="#{loginBean.renderizarMenu('REPORT_PENDING_MANAGEMENT')}" action="#{menuBean.navegar('REPORT_PENDING_MANAGEMENT')}" ajax="false"/>
                 <p:menuitem value="#{msg.report_relation_user_outlet}" rendered="#{loginBean.renderizarMenu('REPORT_RELATION_USER_OUTLET')}" action="#{menuBean.navegar('REPORT_RELATION_USER_OUTLET')}" ajax="false"/>
                 <p:menuitem value="#{msg.report_blancos}" rendered="#{loginBean.renderizarMenu('REPORT_BLANCOS')}" action="#{menuBean.navegar('REPORT_BLANCOS')}" ajax="false"/>
+                <p:menuitem value="#{msg.report_seller}" rendered="#{loginBean.renderizarMenu('REPORT_SELLER')}" action="#{menuBean.navegar('REPORT_SELLER')}" ajax="false"/>
+                <p:menuitem value="#{msg.report_duplicates}" rendered="#{loginBean.renderizarMenu('REPORT_DUPLICATES')}" action="#{menuBean.navegar('REPORT_DUPLICATES')}" ajax="false"/>
             </p:submenu>
 
             <p:submenu label="#{msg.m_perfil}">                        
